--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,6 +1,6 @@
 BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
-BBFILE_COLLECTIONS += "mooneye-hybris-layer"
-BBFILE_PATTERN_mooneye-hybris-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_mooneye-hybris-layer = "7"
-LAYERSERIES_COMPAT_mooneye-hybris-layer = "honister"
+BBFILE_COLLECTIONS += "garmin-hybris-layer"
+BBFILE_PATTERN_garmin-hybris-layer := "^${LAYERDIR}/"
+BBFILE_PRIORITY_garmin-hybris-layer = "7"
+LAYERSERIES_COMPAT_garmin-hybris-layer = "honister"
