--- a/conf/machine/garmin.conf
+++ b/conf/machine/garmin.conf
@@ -9,7 +9,7 @@ MACHINE_DISPLAY_ROUND = "true"
 MACHINE_HAS_WLAN = "true"
 
 PREFERRED_VERSION_android = "oreo"
-PREFERRED_PROVIDER_virtual/kernel = "linux-mooneye"
+PREFERRED_PROVIDER_virtual/kernel = "linux-garmin"
 PREFERRED_VERSION_linux = "3.10+lollipop"
 
 IMAGE_INSTALL += "android-tools android-system underclock msm-fb-refresher asteroid-compass"
